--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.3.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
+    "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
