--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
